# text-simplification-effects-eye-movements

./: .pre-commit-config.yml  LICENSE  README.md  env.yaml  pyproject.toml
src/: Julia_models.py
src/Eye_metrics/: fit_julia_effects_by_col.py  fit_mixed_effects_julia.py  fit_mixed_effects_julia_per_subject_text.py  fit_response_to_linguistic.py  plot_mixed_effects_results.py
